style.css
/*////////////////////////////////////////////////////This is the CSS for the Visit Nebraska Project/////////////////////////////////////////////////*/


.CSSGrid {
    display: grid;
    grid-template-columns: 50% 50%;
    grid-template-rows: auto auto 675px auto 700px auto auto auto auto;
    justify-content: center;
    grid-template-areas:
    "navLogo navText"
    /*"logoBannerArea logoBannerArea"*/
    "headerContentText Content"
    "aboutMeSect aboutMeSect"
    "aboutMeSectBar  aboutMeSectBar"
    "casePreview1 casePreview1Pic"
    "contactMe contactMe"
    "contactMeContent contactMeContent"
    "contactText contactText"
    "footer footer";
}

a {
    text-decoration: none;
}

a:link {
    color: #F1F1F1;
}
a:visited {
    color: #F1F1F1;
}
.navtext a:hover {
    color: #eae0c2;
}
a:active {
    color: #F1F1F1;
}

h3 {
    font-family: 'Roboto Slab', serif, Muli;
    font-size: 48px;
    font-style: normal;
    font-variant: normal;
    font-weight: 500;
    line-height: 15.4px;
}

p {
    font-family: 'Roboto Slab', serif;
    font-size: 19px;
    font-style: normal;
    font-variant: normal;
    font-weight: 567;
    line-height: 20px;
    word-spacing:4.4px;

}


.navlogo {
    grid-template-area: navLogo;
    height:auto;
    background-color: #4C444C;
    align-content: center;
}

#navlogopadd {
    padding-left: 100px;
    padding-right: 100px;
}

.navtext {
    grid-template-area: navText;
    height:auto;
    background-color: #4C444C;
    text-decoration: none;
    font-size:25px;
    color: #F1F1F1;
    text-align:right;
    padding-left:0px;
    padding-right:0px;
    word-spacing: 20.3px;
}

#navtextpadd {
    margin-right:0px;
    padding-top: 40px;
    padding-bottom: 30px;
    padding-right: 102px;
    padding-left:0px;
    line-height: 40px;

}




.headercontenttext {
    grid-template-area: headerContentText;
    height:auto;
    width:auto;
    margin:20px;
    margin-top:20px;
    margin-right:0px;
}

#headercontenttextpadd {
    padding-top:150px;
}

.mybutton {
box-shadow: 3px 3px 0px 0px #1c1b18;
background:linear-gradient(linear, left top, left bottom, color-stop(0.05, #eae0c2), color-stop(1, #ccc2a6));
background-color:#eae0c2;
border-radius:15px;
border:2px solid #333029;
display:inline-block;
cursor:pointer;
color:#505739;
font-family:Arial;
font-size:14px;
font-weight:bold;
font-style:italic;
padding:9px 27px;
text-decoration:none;
}
.mybutton:hover {
background:linear-gradient(to bottom, #ccc2a6 5%, #eae0c2 100%);S
background-color:#ccc2a6;
}
.mybutton:active {
position:relative;
top:1px;
}

#mybuttonpadd {
    margin-left:210px;
    margin-right:260px;
    padding-top:7px;
    padding-bottom:15px;
}


#headerimagepadd {
    padding-top:40px;
}

.box{
    font-family: Arial;
    height: 463px;
    width:660px;
    background-image: linear-gradient(to right, /*#e6e6e6*/#e3e3e3, #e3e3e3, #e3e3e3, #e3e3e3, #e3e3e3, #e3e3e3, white);
    color:black;
    /*text-align: center;*/
    font-size: 40px;
    padding: 20px;
    margin: 20px;
    margin-right:0px;
}

.round {
    border-radius: 10px;
}

.aboutmesect {
    grid-template-area: aboutMeSect;
    grid-column-end: span 2;
    margin-top:160px;
}

.aboutmeheadtext {
    text-align: center;
    padding-top: 1px;
    margin-top:60px;
}


/*.animateLineholder {*/
/*    width:185px;*/
/*    margin-top:20px;*/
/*    margin-left:476px;*/
/*    margin-right:460px;*/
/*    padding-left:200px*/
/*    align-content:center;*/
/*}*/

.animateline {
  height:10px;
  width:1px;
  margin-top:10px;
  margin-left:775px;
  border-bottom:1px solid #000;
  animation: increase 28s;
  animation-fill-mode: both;
}

@keyframes increase {
    100% {
        width: 175px;
    }
}

#aboutmepadd {
    padding-top:26px;
    padding-bottom:70px;
    padding-right:300px;
    padding-left:300px;
    letter-spacing: 2px;
    margin-top:25px;
    margin-bottom:60px;
}

.aboutmesectbar {
    grid-template-area: aboutMeSectBar;
    grid-column-end: span 2;
    margin-top:87px;
    padding-top:41px;
    background-color:#eae0c2;
    color:#4C444C;
    font-family: "Trebuchet MS", Helvetica, sans-serif;
    text-align: center;
    font-size:36px;
    height:70px;
}

#aboutmesecttextpadd {
    margin-top:25px;
    padding-right:300px;
    padding-left:300px;
}

.casepreview1 {
    grid-template-area: casePreviewPic1;
    /*align-self: center;*/
}

#buzzbuzzlogo {
    margin-top:250px;
    margin-left:175px;
}

#buzzbuzzlogotext {
    margin-left:183px;
    margin-right:92px;
    margin-top;60px;
    padding-top:24px;
    font-family: 'Roboto Slab', serif;
    font-size: 8px;
    font-style: normal;
    font-variant: normal;
    font-weight: 490;
    line-height: 14px;
    /*word-spacing:2px;*/
}

.casepreviewbutton {
box-shadow: 0.05px 0.05px 0.05px 0.05px #1c1b18;
background:linear-gradient(linear, left top, left bottom,
color-stop(0, #eae0c2), color-sto(0, #ccc2a6));
background-color:#eae0c2;
border-radius:15px;
border:2px solid #333029;
display:inline-block;
cursor:pointer;
color:#505739;
font-family:Arial;
font-size:14px;
font-weight:bold;
font-style:italic;
padding:9px 27px;
text-decoration:none;
}
.casepreviewbutton:hover {
background:linear-gradient(to bottom, #ccc2a6 7%, #eae0c2 100%);S
background-color:#ccc2a6;
}
.casepreviewbutton:active {
position:relative;
top:1px;
}

#casepreviewbutoonholder {
    width:50%;
    margin-top:100px;
}

.casepreview1pic {
    grid-template-area: casePreview1Pic;
    padding-top:150px;
    margin-left:80px;
}

#greyBackground {
    /*background-color: #e6e6e6;*/
}

.contactMe {
  grid-template-area: contactMe;
  grid-column-end: span 2;
  /* justify-self: center;
  margin-top:30px; */
}

.mapPadd {
  margin-left:50%;
  padding-left:60px;
}

.contactMeContent {
  grid-template-area: contactMeContent;
  grid-column-end:2;
  justify-content:center;
  margin-top:85px;
}


ul {
    display: inline-block;
    list-style: circle;
    margin-top:28px;
}

li {
  margin-bottom: 5px;
  width:250px;
  text-align:left;
}

button p {
  color:black;
}

button p:hover {
  color:#0039e6;
}

button p:active {
  color:green;
  text-decoration:underline;
}

button p:visited {
  color:red;
}


.contactText {
  grid-template-area: contactText;
  grid-column-end: span 2;
  margin-top:42px;
  margin-bottom:20px;
  text-align:center;
}

.footer {
  grid-template-area: footer;
  grid-column-end: span 2;
  height:40px;
  background-color: #4C444C;
  text-align:center;
  color:#F1F1F1;
}


/*///////////////////////////////////Queries///////////////////////////////////*/

@media (max-width: 400px) {
  .flex-grid,
  .flex-grid-thirds {
    display: block;
  }

/*@media screen and (min-width: 1024px) {*/
/*    a {*/
/*        color:red;*/
/*        background-color:red;*/
/*    }*/
/*}*/

